test/runnable/extra-files/lib10386/foo/bar.d
module lib10386.foo.bar;

void foo(int x)
{
    assert(x == 1);
}
