test/fail_compilation/fail164.d

void foo()
{
    const int*** p;
    const(int)*** cp;
    cp = p;
}
